--- a/bakalarka-frontend/src/app/pages/students/listDiplomas-dialog/listDiplomas-dialog.component.html
+++ b/bakalarka-frontend/src/app/pages/students/listDiplomas-dialog/listDiplomas-dialog.component.html
@@ -1,10 +1,14 @@
 <div class="wrapper">
+  <p></p>
+  <button class="btn btn-primary" (click)="onNoClick()">Zavrieť</button>
+</div>
+<div *ngIf="premenna == 'vypis'" class="wrapper">
     <p>
       Študent <strong>{{ oznam }}</strong> nemá pridaný žiadny diplom. 
     </p>
 </div>
 
-<div class="col-lg-12">
+<div *ngIf="premenna !== 'vypis'" class="col-lg-12">
   <table class="table">
     <thead>
       <tr>
@@ -15,7 +19,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let ownDdiploma of ownDiplomas" >
+      <tr *ngFor="let ownDiploma of ownDiplomas" >
         <td>{{ ownDiploma["type"] }}</td>
         <td>{{ ownDiploma["diploma_title"] }}</td>
         <td>{{ ownDiploma["round"] }}</td>
@@ -24,3 +28,9 @@
     </tbody>
   </table>
 </div>
+
+<button
+    class="btn btn-primary"
+    type="button"
+    (click)="exportAll()"
+  >Exportovať všetky údaje</button>
