--- a/bakalarka-frontend/src/app/pages/students/listDiplomas-dialog/listDiplomas-dialog.component.scss
+++ b/bakalarka-frontend/src/app/pages/students/listDiplomas-dialog/listDiplomas-dialog.component.scss
@@ -8,3 +8,17 @@
         width: 600px;
     }
 }
+
+#para2{
+    
+    padding-bottom: 15px;
+    padding-top: 5px;
+
+    
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+#para3{
+    margin-right:10px;
+}
