--- a/bakalarka-frontend/src/app/pages/students/students.component.html
+++ b/bakalarka-frontend/src/app/pages/students/students.component.html
@@ -14,7 +14,7 @@
     <div class="col-sm-3">
       <select [(ngModel)]="selectedYear" class="custom-select" name="year" (change)="onYearSelect()">
         <option value="all">Všetky roky</option>
-        <option *ngFor="let year of years" [value]="year.OBDOBIE">{{ year.OBDOBIE }}</option>
+        <option *ngFor="let year of years" [value]="year">{{ year }}</option>
       </select>
     </div>
   </div>
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <br class="my-4">
+  <!--
 
   <div class="row">
     <div class="col-sm-2">
@@ -48,10 +48,152 @@
       <button (click)="onClickAll()">Zobraz všetkých študentov</button>
     </div>
   </div>
+-->
 
-  <br class="my-4">
 </div>
 
+<div class="tabs-wrapper">
+  <button
+    [ngClass]="{ 'active': showFilter }"
+    class="tabs-control__button"
+    (click)="switchTabs()"
+  >
+    Filter
+  </button>
+  <button
+    [ngClass]="{ 'active': showLabels }"
+    class="tabs-control__button"
+    (click)="switchTabs()"
+  >
+    Upravovať stĺpce
+  </button>
+
+  <!--
+  <div *ngIf="showLabels" class="tab">
+    <button class="btn btn-raised btn-primary" margin-right (click)="selectAll()">Označiť všetky</button>
+    <button class="btn btn-raised btn-primary" (click)="deselectAll()">Odznačiť všetky</button>
+    <hr>
+
+    <mat-form-field>
+      <input
+        matInput
+        type="text"
+        placeholder="Vyhľadávanie v stĺpcoch"
+        (input)="filterLabels($event.target.value)"
+      >
+    </mat-form-field>
+
+    <div flex flex-wrap>
+      <div
+        *ngFor="let col of filteredColumns"
+        [ngClass]="{ active: displayedAdmissionsColumns.indexOf(col) > -1 }"
+        class="label"
+        (click)="toggleColumn(col)"
+      >
+        {{ col }}
+      </div>
+    </div>
+  </div>-->
+
+  <div *ngIf="showFilter" class="tab">
+    <mat-form-field>
+      <input
+        matInput
+        type="text"
+        placeholder="Vyhľadávanie"
+        (input)="applyFilter($event.target.value)"
+      >
+    </mat-form-field>
+  </div>
+
+</div>
+
+<div *ngIf="showFilter">
+  <!--
+    Start table 
+  -->
+  <table mat-table #admSort="matSort" matSort [dataSource]="admissions" full-width>
+    <ng-container [matColumnDef]="column" *ngFor="let column of displayedAdmissionsColumns">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
+      <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Diplom" stickyEnd>
+      <th mat-header-cell *matHeaderCellDef> Diplom </th>
+      <td mat-cell *matCellDef="let element">
+        <button class="btn btn-primary" (click)="openDiplomaDialog(element)" no-margin>Pridať</button>
+        <button class="btn btn-primary" no-margin (click)="openListDiplomasDialog(element)">Zobraz diplomy</button>
+      </td>
+    </ng-container>
+    
+    <!--<ng-container matColumnDef="Diplomy" stickyEnd>
+      <th mat-header-cell *matHeaderCellDef> Diplomy </th>
+      <td mat-cell *matCellDef="let element">
+        <button class="btn btn-primary" no-margin (click)="openListDiplomasDialog(element)">Zobraz diplomy</button>
+      </td>
+    </ng-container>-->
+  
+    <tr mat-header-row *matHeaderRowDef="_displayedColumnsAndActions()"></tr>
+    <tr mat-row *matRowDef="let row; columns: _displayedColumnsAndActions();"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons #paginator></mat-paginator>
+
+  <!--
+    End table 
+  -->
+</div>
+
+
+
+
+
+
+<h2 id="ratios" class="section-header" padding>Štatistiky o diplomoch</h2>
+
+<div class="lastNYears" flex align-items-center>
+  <span>Zobraziť údaje z posledných </span>
+
+  <input
+    [(ngModel)]="lastNYears"
+    class="form-control lastNYears__input"
+    type="number"
+    min="1"
+    [max]="schoolYears.length"
+    margin-left margin-right
+    (ngModelChange)="onlastNYearsChange()"
+  >
+
+  <span>importovaných rokov.</span>
+</div>
+
+<h2 id="ratios" class="section-header" padding>Grafy</h2>
+
+<div class="row">
+  <div class="col-lg-6">
+    <app-chart
+      [title]="'Počet prihlášok na jednotlivé stupne'"
+      [data]="[ciselkoS, ciselkoBez, ciselkoBezNull]"
+      [labels]="['ano', 'nie', 'null']"
+      [type]="'doughnut'"
+      [legend]="false"
+    ></app-chart>
+  </div>
+  <div class="col-lg-6">
+    <app-chart
+      [title]="'Počty študentov, ktorý poslali diplomy'"
+      [data]="[ciselkoS, ciselkoBez, ciselkoBezNull]"
+      [labels]="['Uznané diplomy', 'Neuznané diplomy', 'Neposlali diplomy']"
+      [type]="'bar'"
+      [legend]="false"
+    ></app-chart>
+  </div>
+</div>
+
+
+
+
+
+<!--   povodna tabulka
 <div class="col-lg-12">
   <table class="table" id="myTable2">
     <thead>
@@ -88,7 +230,7 @@
   
 </div>
 
-
+-->
 
 
 
