import vstupnych testov

--- a/bakalarka-frontend/src/app/pages/import/import.component.html
+++ b/bakalarka-frontend/src/app/pages/import/import.component.html
@@ -25,6 +25,7 @@
           <mat-radio-button value="StudentsDataPt1">Dáta o študentoch - časť 1</mat-radio-button>
           <mat-radio-button value="StudentsDataPt2">Dáta o študentoch - časť 2</mat-radio-button>
           <mat-radio-button value="Diploma">Diplomy</mat-radio-button>
+          <mat-radio-button value="entry_tests">Vstupné testy</mat-radio-button>
         </mat-radio-group>
       </div>
 
