--- a/bakalarka-frontend/src/app/pages/students/prediction/model-create/model-create.component.html
+++ b/bakalarka-frontend/src/app/pages/students/prediction/model-create/model-create.component.html
@@ -39,7 +39,7 @@
     </div>
     <div class="col">
       <p>Vyberte predmet, pre ktorý chcete vytvoriť model.</p>
-      <span class="text-muted">Ak chcete vytvoriť model celkovej predikcie, vyberte možnosť <strong>Celkový model</strong></span>
+      <span class="text-muted">Ak chcete vytvoriť model celkovej predikcie, vyberte možnosť <strong>Celková predikcia</strong></span>
       <mat-form-field>
         <mat-label>Predmet: </mat-label>
         <mat-select [formControl]="subjects">
